# Cyber_agent

./: .gitignore  README.md  pyproject.toml
benchmarks/: picoctf_easy.json
ctf_agent/: __init__.py  __main__.py  config.py  metrics.py  orchestrator.py
ctf_agent/agents/: __init__.py  base.py  planner.py  specialist.py  verifier.py
ctf_agent/memory/: __init__.py  scratchpad.py
ctf_agent/tools/: __init__.py  base.py  crypto.py  exploit.py  forensics.py  recon.py  reverse.py
ctf_agent/utils/: __init__.py  llm.py
skills/: SKILL.md  crypto.md  ctf-solver.skill  ctf_multi_decode.py  forensics.md  pwn_reference.md  reverse.md  web.md
