[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctf-agent"
version = "0.1.0"
description = "Agentic LLM for Autonomous CTF Solving"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Harsh Bhanot"}]

dependencies = [
    "httpx>=0.25.0",
    "pwntools>=4.12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio", "ruff"]

[project.scripts]
ctf-agent = "ctf_agent.__main__:main"

[tool.setuptools.packages.find]
include = ["ctf_agent*"]

[tool.ruff]
line-length = 100
target-version = "py310"
